# WeatherAlert

./: main.py  pyproject.toml
src/: app.py  weather_fetcher.py  weather_processor.py
tests/: test_weather_fetcher.py  test_weather_processor.py
