[tool.poetry]
name = "weatheralert"
version = "0.1.0"
description = ""
authors = ["Martin Wanczyk <wanczyk.martin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
